style.css
/* ... */
#header-subblock-2 {
    padding: 2px;
    min-width: min-content;
    border-color: chartreuse;
    /* position: relative;
    left: 5%; */
    /* border: red solid 1px; */
    margin-left: 10%;
}

#header-subblock-3 {
    width: 50px;
    border-color: brown;
    display: inline-block;
    /* position: relative;
    left: 5%; */
    /* text-align: right; */
    padding: 2px;
    margin: 2px;
}

#hide-header-subblock-3 {
    /* border: brown solid 1px; */
    border-color: brown;
    border-radius: 5px;
    text-align: left;
}

#header-schedule-options-2 {
    margin-top: 15px;
    min-width: 39rem;
    /* border: solid 1px; */
    border-color: chartreuse;
    text-align: end;
    /* padding-right: 15px; */
    box-sizing: border-box;
}

#options, #new-block, #clean-blocks, #import-export {
    vertical-align: middle;
    height: 40px;
    /* margin: 0 10px; */
}

#options {
    position: relative;
    right: 10px;
}

#new-block {
    height: 35px;
    padding: 2.5px;
}

/* #new-block:hover {
    -webkit-transform: rotate(36deg);
    transform: rotate(36deg);
} */

#delete-schedule {
    vertical-align: middle;
    height: 20px;
    padding: 10px;
}

#delete-all-schedules {
    vertical-align: bottom;
    height: 30px;
    /* margin-right: 20px; */
    /* padding: 10px 5px 0 5px; */
    padding-top: 10px;
}

.icon-button {
    display: inline-block;
    vertical-align: middle;
    height: 40px;
    margin: 0 10px;
}

.icon-button:hover {
    cursor: pointer;
    border-radius: 5px;
    background: linear-gradient(to top, #9aa2eb 0%, cornflowerblue 100%);
}

.icon-button:active {
    background: linear-gradient(to top, #d6d2d2 0%, cornflowerblue 100%);
}

.icon-button-image:active {
    position: relative;
    left: 1px;
}

#options:active {
    top: 1px;
}

h2 {
    /* font-family: OpenSans-Bold; */
    font-size: 24px;
    font-weight: bolder;
    display: inline-block;
    position: relative;
    bottom: 10px;
}

#welcome {
    margin: 10px 0 10px 50px;
    height: 33px;
    width: min-content;
    /* display: inline-block; */
    font-weight: bold;
    font-size: 167%;
    min-width: 176px;
    vertical-align: top;
}

.header-text {
    font-weight: bold;
    font-size: large;
}

#header-users {
    /* display: inline-block; */
    vertical-align: bottom;
    width: max-content;
    /* vertical-align: middle; */
    margin: 10px 0;
    margin-left: 50px;
}

#user-name {
    margin-bottom: 6px;
}

/* #test {
    position: relative;
    top: 6px;
    margin: 0 auto;
    width: 78em;
    padding: 0 12px;
    border: black solid 1px;
} */

/* #user-name, #name-h, .header-text, .header-label, .header-inputs {
    border: groove 1px gray;
} */


#header-inputs-1 {
    margin-top: 4px;
}

#header-inputs-2 {
    margin-bottom: 4px;
}

.header-button, .header-label {
    /* background-color: cornflowerblue; */
    font-size: medium;
    font-weight: bold;
    color: black;
}

.header-inputs {
    padding: 2px;
}

.header-input {
    width: 122px;
    /* margin-left: 180px; */ /* si el bloque de inputs está debajo de los botones */
}

/* #delete-all {
    display: inline-block;
    border-color: chartreuse;
    width: fit-content;
    margin-right: 5px;
} */

#blocks-container {
    /* display: flexbox; */
    /* border: chocolate 2px solid; */
    /* width: 100%; */
    
    margin: 2px auto;
        /* para que el efecto de centrado horizonatal del atributo 'auto' surta efecto, hay que ajustar el tamaño del contenedor al ancho de dos bloques */
    width: 78.3em;
    padding-top: 112.5px;
         /* habilatado si header posee position fixed */
}

.block {
    width: 39rem;
    border: darkorchid solid 1px;
    background: peachpuff;
    display: inline-block;
    /* padding-bottom: 1.35em; */
    /* max-height: 20rem; */
    /* min-height: 20rem; */
    vertical-align: top;
         /* Corrige el desfase vertical de bloques inline-block */
}

.block-advanced-options {
    /* border: brown solid 1px; */
    height: 2em;
    border-radius: 5px;
    margin: 5px 10px 0 45px;
    padding: 1px;
    text-align: end;
}

.icon-button-options {
    height: 30px;
    border-radius: 5px;
}

.icon-button-options:hover {
    cursor: pointer;
    border-radius: 5px;
    background: linear-gradient(to top, #9aa2eb 0%, peachpuff 100%);
}

.icon-button-options:active {
    position: relative;
    right: 1px;
    background: linear-gradient(to top, #9aa2eb 0%, cornflowerblue 100%);
}


.block-options {
    display: flex;
    align-items: center;
    /* border: brown solid 1px; */
    border-radius: 5px;
    height: 1.35em;
    margin: 5px 10px 5px 45px;
    padding: 1px;
    /* color: darkgreen; */
}

.titleNumber {
    position: relative;
    /* left: 2px; */
    right: 2em;
    text-align: right;
    font-weight: bolder;
    /* border: solid black 1px; */
    width: 1.5em;
    color: peachpuff;
    padding-right: 10px;
    /* line-height: 25px;     */
}

.title {
    /* padding-left: 20px; */
    margin: 12px 10px 12px 45px;
    height: 23px;
    border-radius: 5px;
    display: flex;
    align-items: center;
    /* border: solid black 1px; */
}

h3.title-description {
    font-size: 18px;
    font-weight: bolder;
    margin-left: 2px;
    padding-left: 4px;
    line-height: 25px;
    position: relative;
    right: 2em;
}

input.title-i {
    margin-left: 20px;
    position: relative;
    right: 3em;
}

.button-edit-t {
    position: relative;
    right: 3em;
}



ol {
    /* height: 20rem; */
    margin-bottom: 20px;
    margin-left: 45px;
}

li {
    height: 1.35em;
    display: flex;
         /*this attribute hides list-style */
    align-items: center;
    margin: 2px 0;
    /* padding: 1px 0; */
    margin-right: 10px;
    border: darkgrey 0.5px groove;
    border-radius: 5px;
}
/* ... */

